fixed footer spacing issues and update to readme

--- a/style.css
+++ b/style.css
@@ -189,6 +189,10 @@ body {
   margin-bottom: 20px;
 }
 
+.project-header{
+  font-size:40px;
+}
+
 #project-container {
   margin-bottom: 200px;
   background-color: rgb(40, 47, 57);
@@ -219,8 +223,7 @@ body {
 
 .footer {
   display: flex;
-  justify-content: space-between;
-  background-color: rgb(40, 47, 57);
+  justify-content: space-evenly;
   clear: both;
   position: relative;
   height: 40px;
@@ -231,15 +234,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(40, 47, 57);
   color: white;
-  height: 100%;
-  width: 20%;
+  width: 25%;
 }
 
 .footer-item:hover {
-  background-color: darkslategray;
+  font-size: 16px;
+  background-color: transparent;
   color: white;
   transition: all 1s ease;
+
 }
 
 /* Carousel */
